alterações no banner e na navbar

--- a/css/styles.css
+++ b/css/styles.css
@@ -4,13 +4,18 @@ body{
 
 .nm-hamburgueria{
     text-align: center;
-    color: #dc3545;
+    font-size: 4.5rem;
+    color: white;
     font-weight: 700;
 }
 
 .dsc-hamburgueria{
     text-align: center;
-    font-style: italic;
+    color: white;
+}
+
+#apr-hamburgueria{
+    height: 75vh;
 }
 
 .tlt-cardapio{
@@ -38,4 +43,15 @@ body{
 .cor-da-marca{
     background-color: #dc3545;
     color: white;
+}
+
+.hero{
+    background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../images/banner_hamburgueria.jpg');
+    background-size: cover;
+    background-position: center center;
+    background-attachment: fixed;
+}
+
+#apr-hamburgueria .hero{
+    height: 70vh;
 }
