--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,21 @@
-body{
-    background-color: #000;
+/*******************************************
+                 CONFIGURAÇÕES GERAIS
+*******************************************/
+
+.cor-da-marca{
+    background-color: #dc3545;
+    color: white;
 }
+
+/*******************************************
+                 NAVBAR
+*******************************************/
+
+
+
+/*******************************************
+                 HERO
+*******************************************/
 
 .nm-hamburgueria{
     text-align: center;
@@ -14,41 +29,6 @@ body{
     color: white;
 }
 
-#apr-hamburgueria{
-    height: 75vh;
-}
-
-.tlt-cardapio{
-    text-align: center;
-    color: #dc3545;
-    font-weight: 500;
-    font-size: 2.75em;
-    margin-bottom: 3%;
-}
-
-.tlt-sanduiche{
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-    text-align: center;
-    color: white;
-    background-color: #dc3545;
-    padding: 0.5%;
-    border-radius: 5px;
-    height: 2em;
-    width: 12em;
-}
-
-.fa{
-    color: #dc3545;
-    font-size: 35px;
-}
-
-.cor-da-marca{
-    background-color: #dc3545;
-    color: white;
-}
-
 .hero{
     background: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)), url('../images/banner_hamburgueria.jpg');
     background-size: cover;
@@ -56,8 +36,44 @@ body{
     background-attachment: fixed;
 }
 
+#apr-hamburgueria{
+    height: 100vh;
+    width: 100vw;
+}
+
 #apr-hamburgueria .hero{
     height: 70vh;
+}
+
+
+/*******************************************
+                 CARDÁPIO
+*******************************************/
+
+.tlt-cardapio{
+    text-align: center;
+    color: white;
+    background-color: #dc3545;
+    font-weight: 500;
+    font-size: 2.75em;
+    margin-bottom: 3%;
+    border-radius: 5px;
+}
+
+/*******************************************
+                 CARDS SANDUÍCHE
+*******************************************/
+
+.tlt-sanduiche{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    text-align: center;
+    color: #dc3545;
+    font-size: 2.5rem;
+    padding: 0.5%;
+    height: 2em;
+    width: 12em;
 }
 
 .card-sanduiche{
@@ -67,13 +83,14 @@ body{
     align-items: center;
     justify-content: space-evenly;
     width: 30rem;
-    background-color: whitesmoke;
     padding: 3%;
     border-radius: 10px;
 }
 
 .img-sanduiche{
-    width: 25rem;
+    width: 350px;
+    height: 350px;
+    object-fit: cover;
     background-size: cover;
     background-position: center center;
     background-attachment: fixed;
@@ -83,3 +100,16 @@ body{
 .card-sanduiche .img-sanduiche{
     border-radius: 10px;
 }
+
+/*******************************************
+                 RODAPÉ
+*******************************************/
+
+.fa{
+    color: #dc3545;
+    font-size: 35px;
+}
+
+/*******************************************
+                 FORMULÁRIO
+*******************************************/
