--- a/css/styles.css
+++ b/css/styles.css
@@ -38,7 +38,7 @@
 
 #apr-hamburgueria{
     height: 100vh;
-    width: 100vw;
+    width: auto;
 }
 
 #apr-hamburgueria .hero{
@@ -73,7 +73,7 @@
     font-size: 2.5rem;
     padding: 0.5%;
     height: 2em;
-    width: 12em;
+    width: auto;
 }
 
 .card-sanduiche{
@@ -82,14 +82,14 @@
     flex-direction: column;
     align-items: center;
     justify-content: space-evenly;
-    width: 30rem;
+    width: auto;
     padding: 3%;
     border-radius: 10px;
 }
 
 .img-sanduiche{
-    width: 350px;
-    height: 350px;
+    width: 300px;
+    height: 70vh;
     object-fit: cover;
     background-size: cover;
     background-position: center center;
