--- a/css/styles.css
+++ b/css/styles.css
@@ -89,7 +89,7 @@
 
 .img-sanduiche{
     width: 300px;
-    height: 70vh;
+    height: 20vh;
     object-fit: cover;
     background-size: cover;
     background-position: center center;
@@ -113,3 +113,8 @@
 /*******************************************
                  FORMULÁRIO
 *******************************************/
+
+.pedidos{
+    display: flex;
+    align-items: center;
+}
